# example-zk-light-clients

./: .gitignore  .gitmodules  Apache 2.0 License  Cargo.toml  LICENSE-BUSL  MIT License  README.md  ThirdPartyNotices.txt
.github/workflows/: backend.yml  bench_pr_comment.yml  crypto.yml  foundry.yml  gnark.yml  hardhat.yml  repo-sync.yml  rust.yml  tables.toml
aptos/: Cargo.toml
aptos/benches/: proof.rs
aptos/src/: lib.rs
aptos/src/coprocessors/: mod.rs  parser.rs  utils.rs
aptos/src/corprocessors/: mod.rs  parser.rs  utils.rs
aptos/src/crypto/: error.rs  sig.rs  supernova.rs
aptos/src/crypto/circuit/: equality.rs  iteration_step_wrapper.rs  mod.rs  parser.rs  utils.rs
aptos/src/merkle/: node.rs  proof.rs
aptos/src/types/: epoch_state.rs  error.rs  ledger_info.rs  validator.rs  waypoint.rs
aptos/src/types/api/: block.rs  error.rs  mod.rs
aptos/src/unit_tests/: mod.rs
aptos/src/unit_tests/aptos/: mod.rs  wrapper.rs
near/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  docker-stack.yml
near/backend/: .gitignore  DOCS.md  package-lock.json  package.json
near/backend/src/: eth-helper.ts  near-helper.ts  server.ts
near/backend/src/controllers/: proof.controller.ts
near/block_finality/: Cargo.toml
near/block_finality/fuzz/: Cargo.toml  README.md
near/block_finality/fuzz/fuzz_targets/prove_crypto/: ed25519_circuit_targets_caching.rs  ed25519_proof.rs  ed25519_proof_reuse_circuit.rs  prove_sub_hashes.rs  sha256_proof.rs
near/block_finality/fuzz/fuzz_targets/prove_primitives/: prove_eq_array.rs  two_thirds.rs
near/block_finality/fuzz/fuzz_targets/recursion/: recursive_proof.rs  recursive_proofs.rs
near/block_finality/fuzz/fuzz_targets/utils/: bit_byte.rs  decode_hex.rs  get_sha256_hash.rs  u32u8.rs  u8u32.rs
near/block_finality/src/: lib.rs  prove_block.rs  prove_crypto.rs  prove_primitives.rs  recursion.rs  service.rs  types.rs  utils.rs
near/contracts/foundry/verifier/: README.md
near/contracts/hardhat/: README.md  package.json
near/crypto/plonky2_ecdsa/: Cargo.toml
near/crypto/plonky2_ecdsa/src/: lib.rs  serialization.rs
near/crypto/plonky2_ecdsa/src/gadgets/: biguint.rs  glv.rs  nonnative.rs  split_nonnative.rs
near/crypto/plonky2_ed25519/: Cargo.toml
near/crypto/plonky2_ed25519/src/: main.rs
near/crypto/plonky2_ed25519/src/curve/: eddsa.rs
near/crypto/plonky2_ed25519/src/field/: ed25519_base.rs  ed25519_scalar.rs
near/crypto/plonky2_ed25519/src/gadgets/: eddsa.rs
near/crypto/plonky2_sha256/src/: circuit.rs  main.rs
near/crypto/plonky2_sha256_u32/: Cargo.toml
near/crypto/plonky2_sha256_u32/src/: sha256.rs
near/crypto/plonky2_sha512/: Cargo.toml
near/crypto/plonky2_sha512/src/: circuit.rs  main.rs
near/crypto/plonky2_sha512_u32/src/: sha512.rs  types.rs
near/crypto/plonky2_u32/: Cargo.toml
near/crypto/plonky2_u32/src/gadgets/: binary_u32.rs  interleaved_u32.rs  mod.rs
near/crypto/plonky2_u32/src/gates/: interleave_u32.rs  mod.rs  range_check_u32.rs  uninterleave_to_b32.rs  uninterleave_to_u32.rs
near/data/: next_block_header_small.json  next_block_header_small_skip.json  prev_epoch_block_header_small.json  validators_ordered.json  validators_ordered_small.json
near/docker/: Dockerfile  Dockerfile.prover
near/docs/: Architecture.md  Build_docker_images.md  Building.md  Developing.md  Proving_scheme.md
near/gnark-plonky2-verifier/: README.md
near/gnark-plonky2-verifier/cmd/: compile.go
near/gnark-plonky2-verifier/docker/: Dockerfile_gnark_prebuilt
near/near_bft_finality/: Cargo.toml
near/near_bft_finality/src/: types.rs  utils.rs
near/near_bft_finality/src/prove_bft/: bft.rs  block_finality.rs
near/near_bft_finality/src/prove_block_data/: header_bphash.rs  keys_stakes.rs  primitives.rs  signatures.rs
near/near_bft_finality/src/prove_crypto/: ed25519.rs  recursion.rs  sha256.rs
proptest-regressions/merkle/: proof.txt
src/: lib.rs  types.rs
src/crypto/: hash.rs  mod.rs  sig.rs  supernova.rs
src/crypto/circuit/: chunk_step.rs  hash.rs  mod.rs
src/merkle/: mod.rs  node.rs  proof.rs
src/types/: block_info.rs  epoch_state.rs  ledger_info.rs  mod.rs  trusted_state.rs  validator.rs
src/types/api/: block.rs  mod.rs
src/unit_tests/: mod.rs
