[package]
name = "aptos-lc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
blst = "0.3.11"
bytes = { version = "1.5.0", features = ["serde"] }
getset = "0.1.2"
hex = "0.4.3"
itertools = "0.12.1"
proptest = "1.4.0"
serde = "=1.0.152"
serde_bytes = "0.11.6"
serde_json = "1"
sha3 = "0.11.0-pre.3"
test-strategy = "0.3.1"
thiserror = "1.0.56"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }

# Prover dep
arecibo = { git = "https://github.com/lurk-lab/arecibo", branch = "dev", package = "arecibo" }
bellpepper-core = { version="0.4.0", default-features = false }
bellpepper = { version="0.4.1", default-features = false }
bellpepper-chunk = { git = "https://github.com/tchataigner/bellpepper-gadgets", branch = "feature/chunk-merkle-example", package = "bellpepper-chunk" }
bellpepper-keccak = { git = "https://github.com/tchataigner/bellpepper-gadgets", branch = "feature/chunk-merkle-example", package = "bellpepper-keccak" }
bellpepper-merkle-inclusion = { git = "https://github.com/tchataigner/bellpepper-gadgets", branch = "feature/chunk-merkle-example", package = "bellpepper-merkle-inclusion" }
ff = "0.13.0"
halo2curves = { version = "0.6.0", features = ["bits", "derive_serde"] }


# shallow cloning would sure help here https://github.com/rust-lang/cargo/issues/1171
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.9.1", optional = true }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.9.1", optional = true }


[dev-dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }

[features]
aptos = ["dep:aptos-crypto", "dep:aptos-types"]

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }

[profile.dev-ci]
inherits = "dev"
# By compiling dependencies with optimizations, performing tests gets much faster.
opt-level = 3
lto = "thin"
incremental = false
codegen-units = 16