[package]
name = "aptos-lc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
blst = "0.3.11"
bytes = { version = "1.5.0", features = ["serde"] }
getset = "0.1.2"
hex = "0.4.3"
itertools = "0.12.1"
lurk = { git = "https://github.com/lurk-lab/lurk-rs.git", branch = "main", package = "lurk" }
lurk-macros = { git = "https://github.com/lurk-lab/lurk-rs.git", branch = "main", package = "lurk-macros" }
proptest = "1.4.0"
serde = "1.0.193"
serde_bytes = "0.11.6"
serde_json = "1"
sha3 = "0.11.0-pre.3"
test-strategy = "0.3.1"
thiserror = "1.0.56"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }

# Prover dep
arecibo = { git = "https://github.com/lurk-lab/arecibo", branch = "dev", package = "arecibo" }
bellpepper-core = { version = "0.4.0", default-features = false }
bellpepper = { version = "0.4.1", default-features = false }
bellpepper-chunk = { git = "https://github.com/tchataigner/bellpepper-gadgets", branch = "feature/chunk-merkle-example", package = "bellpepper-chunk" }
bellpepper-keccak = { git = "https://github.com/tchataigner/bellpepper-gadgets", branch = "feature/chunk-merkle-example", package = "bellpepper-keccak" }
bellpepper-merkle-inclusion = { git = "https://github.com/tchataigner/bellpepper-gadgets", branch = "feature/chunk-merkle-example", package = "bellpepper-merkle-inclusion" }
ff = "0.13.0"
halo2curves = { version = "0.6.0", features = ["bits", "derive_serde"] }

# shallow cloning would sure help here https://github.com/rust-lang/cargo/issues/1171
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-executor = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-executor-test-helpers = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-executor-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-storage-interface = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-temppath = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-vm-genesis = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }

[dev-dependencies]
cfg-if = "1.0.0"
reqwest = { version = "0.11.23", features = ["blocking"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13" }
# Versions to fit aptos crate
rand = "0.7.3"
rand_core = "0.5.1"

[features]
default = []
aptos = [
    "dep:aptos-crypto",
    "dep:aptos-types",
    "dep:aptos-executor-test-helpers",
    "dep:aptos-temppath",
    "dep:aptos-vm-genesis",
    "dep:move-core-types",
    "dep:aptos-sdk",
    "dep:aptos-executor-types",
    "dep:aptos-executor",
    "dep:aptos-vm",
    "dep:aptos-storage-interface",
]
flamegraph = ["pprof/flamegraph", "pprof/criterion"]

[[bench]]
name = "proof"
harness = false
